# pipelines-with-spark

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-spark  LICENSE  README.md  pyproject.toml
src/pipelines/: analytics.py  example.py  io.py  main.py
