[project]
name = "pipelines-with-spark"
version = "0.1.0"
authors = [
    {name = "Bryan \"Beege\" Berry", email = "beege@codeseoul.org"}
]
license = { text = "MIT License" }
dependencies = [
    "pyspark~=3.5.1",
    "numpy~=1.26.4",
    "setuptools~=70.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipelines"]

[project.scripts]
pipeline = "pipelines:main"
